@@ -15,6 +15,12 @@ WHAT IS NEW?
   * Vikings of Midgard
 
   * Stuff Only Developers Will Notice
+    * Slice velocity commands to make a slice move automatically at
+      pixels-per-tick speeds. [James]
+    * Slice movement commands to make a command move to a target
+      position over a desired number of ticks. [James, Ralph]
+    * "wait for slice" command to make the script wait for slice
+      movement [James]
 
 May 6 2011 [Zenzizenzic]
 
